--- a/app/globals.css
+++ b/app/globals.css
@@ -81,7 +81,7 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(0.1767 0.005 17.64);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
@@ -122,4 +122,9 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.file {
+  clip-path: path('M28 .5h476.374c15.188 0 27.5 12.312 27.5 27.5v41c0 15.74 12.76 28.5 28.5 28.5h584.496c15.19 0 27.5 12.312 27.5 27.5v663c0 15.188-12.31 27.5-27.5 27.5H28C12.812 815.5.5 803.188.5 788V28C.5 12.812 12.812.5 28 .5Z'
+    );
 }
