adds roles animation in header

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --font-play: var(--font-playwrite);
+  --font-news: var(--font-newsreader);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
