--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,59 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  /* .react-activity-calendar__scroll-container::-webkit-scrollbar { */
+  /*   -ms-overflow-style: none; */
+  /*   scrollbar-width: none; */
+  /* } */
+  /**/
+  /* .react-activity-calendar__scroll-container { */
+  /*   -ms-overflow-style: none; */
+  /*   scrollbar-width: none; */
+  /* } */
+
+  /* .react-activity-calendar__footer { */
+  /*   width: 98vw; */
+  /*   display: flex; */
+  /*   position: absolute; */
+  /*   bottom: 0; */
+  /* } */
+  .react-activity-calendar__tooltip {
+    width: max-content;
+    max-width: calc(100vw - 20px);
+    padding: 0.2em 0.5em;
+    border-radius: 0.25em;
+    background-color: hsl(0 0% 10%);
+    color: hsl(0 0% 94%);
+    font-size: 13px;
+
+    /* See the `withArrow` setting. */
+    .react-activity-calendar__tooltip-arrow {
+      fill: hsl(0 0% 10%);
+    }
+
+    /* Use this instead of a media query - the component theme can be set */
+    /* independent of the system color scheme. */
+    &[data-color-scheme='dark'] {
+      background-color: hsl(0 0% 94%);
+      color: hsl(0 0% 6%);
+
+      .react-activity-calendar__tooltip-arrow {
+        fill: hsl(0 0% 94%);
+      }
+    }
+  }
+}
+
 @theme inline {
   --font-news: var(--font-newsreader);
   --radius-sm: calc(var(--radius) - 4px);
